Fix new competitor page back button spacing

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -29,6 +29,10 @@ input[type = 'submit'] {
     &:last-child {
       margin-right: 0;
     }
+
+    #series_name {
+      margin: 0 4px;
+    }
   }
 }
 
